--- a/1.html
+++ b/1.html
@@ -1,7 +1,3 @@
 hola que tal
 este es un curso de git
-<<<<<<< HEAD
-soy el mejor 10..
-=======
-Adrian here
->>>>>>> e1d251b4eb04c33360a5e936b138b1eb737aa559
+cecilio modifica
