--- a/1.html
+++ b/1.html
@@ -3,4 +3,4 @@ este es un curso de git
 cecilio modifica
 chusticiero10 da boss
 Shepard is the REAL BOSS!
-Es un placer poder modificar este fichero jejeje
+Es un placer poder modificar este fichero jejejeje
