--- a/Ivan/Ivan.html
+++ b/Ivan/Ivan.html
@@ -1,2 +1,5 @@
 hola que tal
-aqui FlexotilComplex yea.
+este es un curso de git
+cecilio modifica
+chusticiero10 da boss
+Shepard is the REAL BOSS!
