--- a/Ivan/Ivan.html
+++ b/Ivan/Ivan.html
@@ -1,5 +1,2 @@
 hola que tal
-este es un curso de git
-cecilio modifica
-chusticiero10 da boss
-Shepard is the REAL BOSS!
+aqui FlexotilComplex yea.
