--- a/Lucía Espada/Administración/FormularioAd.html
+++ b/Lucía Espada/Administración/FormularioAd.html
@@ -1,107 +1,105 @@
 <html>
 <meta charset="utf-8">
 	<head>
-		<title>FORMULARIO ADMINISTRACIÓN</title>
+	<title>FORMULARIO ADMINISTRACIÓN</title>
+
+	<style type="text/css">
+
+				p {
+
+					font-size: 12px;
+					font-family: Arial, sans-serif;
+						color: #01437f;
+				}
+				legend {
+
+					font-size: 20px;
+					font-family: Gadugi, sans-serif;
+					color: #58584d;
+
+				}
+				</style>
 	</head>
 	<body>
-
-		<h1>Formulario de prueba (con tabla)</h1>
 		<form id="Mi formulario">
 		<fieldset>
-				<legend><strong>Mi formulario</strong></legend>
-
-		<table border="1px">
-				<th>FORMULARIO ADMINISTRACIÓN</th>
-
-
-			</tr>
-			<tr>
-				<P>
+				<legend><strong>FORMULARIO TRABAJADOR</strong></legend>
+				<p>
 					<label for="nombre">
 						<strong>Nombre</strong>
 						</label>
 						<input type="text" id="nombre" name="Nombre"/>
 					<label for="apellido">
-						<strong>Apellido</strong>
+						<strong>Apellidos</strong>
 						</label>
 						<input type="text" id="apellido" name="Apellido"/>
-
+				</p>
 					<p>
 					<label for="sexo">
-						Sexo
+					<strong>Sexo</strong>
 					</label>
-						<select name="Sexo" id="sexo" name="Sexo">
-							<option>Maculino</option>
-							<option>Femenino</option>
-						</select>
+							<input type="radio" name= "Sexo"/> Maculino
+						<input type="radio" name= "Sexo"/> Femenino
 					</p>
 					<p>
 						<label for="DNI">
-						DNI
+						<strong>DNI</strong>
 						</label>
 						<input type="text" id="DNI" name="dni"/>
 					</p>
 					<p>
 						<label for="domicilio">
-						Domicilio
+						<strong>Domicilio</strong>
 						</label>
 						<input type="text" id="domicilio" name="Domicilio"/>
 					</p>
-					<p>
-						<label for="pais">
-						País
-						</label>
-					</p>
-					<p>
-						<select multiple="multiple" id="pais" name="País"/>
-						<optgroup label ="PAISES">
-							<option>ESPAÑA</option>
-							<option>NORUEGA</option>
-							<option>SUIZA</option>
-							<option>FRANCIA</option>
-						</optgroup>
-						</select>
-					</p>
+
 					<p>
 						<label for="provincia">
-						Provincia
+					<strong>Provincia</strong>
 						</label>
 					</p>
 					<p>
-						<select multiple="multiple" id="provincia" name="Provincia"/>
-						<optgroup label ="Provincias Españolas">
+						<select id="provincia" name="Provincia"/>
 							<option>Barcelona</option>
 							<option>Cantabria</option>
 							<option>Madrid</option>
 							<option>Salamanca</option>
-						</optgroup>
 						</select>
 					</p>
 					<p>
+						<label for="Ciudad">
+						<strong>Ciudad</strong>
+						</label>
+					</p>
+					<p>
+						<select multiple="multiple" id="pais" name="Ciudad"/>
+						<optgroup label ="Ciudad">
+							<option>Santander</option>
+							<option>Cuenca</option>
+							<option>Madrid</option>
+							<option>Barcelona</option>
+						</optgroup>
+						</select>
+					</p>
+
+
+
+					<p>
 						<label for="codigo postal">
-						Código Postal
+						<strong>Código Postal</strong>
 						</label>
 						<input type="text" id="codigo postal" name="Código Postal"/>
 					</p>
 					<p>
 						<label for="telefono">
-						Teléfono
+						<strong>Teléfono</strong>
 						</label>
 						<input type="text" id="telefono" name="Teléfono"/>
 					</p>
 
-					<td rowspan="2">
-					<img src="G:\CREACIÓN Y PUBLICACIÓN DE PÁGINAS WEB\HTML\Imágenes\lafoto.jpg" title="imagen" />
-					</td>
 
 
-
-				</td>
-
-
-			</tr>
-
-		</table>
 		</fieldset>
 			</form>
 	</body>
