mi aporte de imagen

--- a/Lucía Espada/Administración/FormularioAd.html
+++ b/Lucía Espada/Administración/FormularioAd.html
@@ -18,9 +18,13 @@
 					color: #58584d;
 
 				}
+				img {
+
+				}
 				</style>
 	</head>
 	<body>
+		<img src="ayuntamiento.jpeg">
 		<form id="Mi formulario">
 		<fieldset>
 				<legend><strong>FORMULARIO TRABAJADOR</strong></legend>
