--- a/Lucía Espada/Administración/FormularioAd.html
+++ b/Lucía Espada/Administración/FormularioAd.html
@@ -16,25 +16,32 @@
 					font-size: 20px;
 					font-family: Gadugi, sans-serif;
 					color: #58584d;
+					text-align: center;
 
 				}
 				img {
+					width:500px;
 
+				}
+
+		
 				}
 				</style>
 	</head>
 	<body>
-		<img src="ayuntamiento.jpeg">
+		<center><img src="ayuntamiento.jpeg"></center>
 		<form id="Mi formulario">
 		<fieldset>
 				<legend><strong>FORMULARIO TRABAJADOR</strong></legend>
 				<p>
 					<label for="nombre">
-						<strong>Nombre</strong>
+						<strong class="rigth">Nombre      :</strong>
 						</label>
-						<input type="text" id="nombre" name="Nombre"/>
+						<input class="right" type="text" id="nombre" name="Nombre"/>
+					</p>
+						<p>
 					<label for="apellido">
-						<strong>Apellidos</strong>
+						<strong class="left">Apellidos</strong>
 						</label>
 						<input type="text" id="apellido" name="Apellido"/>
 				</p>
