--- a/Lucía Espada/Administración/tabla.html
+++ b/Lucía Espada/Administración/tabla.html
@@ -1,10 +1,26 @@
 <html>
 <head>
-    <link href="http://allfont.es/allfont.css?fonts=micra" rel="stylesheet" type="text/css" />
+
   <style>
 
 th {
-  font-family: 'Micra', arial;
+  font-family: Gadugi, sans-serif;;
+  padding: 1em 1em 1em 1em;
+  background-color: #1e4a72;
+  color:white;
+
+}
+td{
+padding: 1.5em 1.5em 1.5em 1.5em;
+background-color: #51a1de;
+color:white;
+}
+table{
+  border-collapse: collapse;
+  border-color: white;
+}
+table td:hover{
+  background: #307292;
 }
 
   </style>
@@ -12,10 +28,10 @@ th {
 <body>
 <table border="1px">
 <tr>
-  <th>hola</th>
-  <th>hola</th>
-  <th>hola</th>
-  <th>hola</th>
+  <th>HOLA</th>
+  <th>HOLA</th>
+  <th>HOLA</th>
+  <th>HOLA</th>
   <tr>
 <tr>
   <td>asdfasdf</td>
